--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -22,6 +22,7 @@ reth.workspace = true
 reth-optimism-node.workspace = true
 reth-primitives.workspace = true
 reth-optimism-primitives.workspace = true
+reth-optimism-payload-builder.workspace = true
 reth-primitives-traits.workspace = true
 reth-provider.workspace = true
 reth-chainspec.workspace = true
