--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,10 +109,10 @@ reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0", defau
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
 reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
 reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
-reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0"  }
-reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0"  }
+reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
+reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
 reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
-reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0"  }
+reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
 
 # reth-optimism
 reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.0" }
@@ -145,7 +145,7 @@ alloy-op-hardforks = { version = "0.4.2", default-features = false }
 
 # alloy
 alloy = { version = "1.0.37" }
-alloy-evm = { version = "0.21.2", default-features = false, features = ["op"] }
+alloy-evm = { version = "0.23", default-features = false, features = ["op"] }
 alloy-json-rpc = { version = "1.0.37", default-features = false }
 alloy-chains = { version = "0.2.5", default-features = false }
 alloy-provider = { version = "1.0.37", default-features = false }
@@ -187,9 +187,9 @@ alloy-hardforks = { version = "0.4.2", default-features = false }
 revm = { version = "31.0.0", default-features = false }
 revm-state = { version = "8.1.0", default-features = false }
 revm-primitives = { version = "21.0.1", default-features = false }
-revm-database-interface = { version = "*", default-features = false }
-revm-interpreter = { version = "*", default-features = false }
-op-revm = { version = "11.3.0", default-features = false }
+revm-database-interface = { version = "8", default-features = false }
+revm-interpreter = { version = "29", default-features = false }
+op-revm = { version = "12.0", default-features = false }
 alloy-op-evm = { version = "0.23", default-features = false }
 
 # rpc
