--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -58,6 +58,7 @@ world-chain-rpc.workspace = true
 world-chain-pool.workspace = true
 world-chain-test.workspace = true
 world-chain-node.workspace = true
+flashblocks-payload = { workspace = true, features = ["test"] }
 
 reth-db.workspace = true
 reth-e2e-test-utils.workspace = true
@@ -77,6 +78,8 @@ alloy-network.workspace = true
 alloy-eips.workspace = true
 alloy-rpc-types-engine.workspace = true
 alloy-consensus.workspace = true
+alloy-signer.workspace = true
+alloy-signer-local.workspace = true
 
 op-alloy-rpc-types.workspace = true
 op-alloy-rpc-types-engine.workspace = true
