update code owners
remove kitsune and add Kilian and Alessandro

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @0xForerunner @0xKitsune @Dzejkop @0xOsiris @karankurbur @murph
+* @0xForerunner @Dzejkop @0xOsiris @karankurbur @murph @kilianglas @alessandromazza98
