--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -96,3 +96,6 @@ parking_lot.workspace = true
 serde_json.workspace = true
 rand.workspace = true
 bytes.workspace = true
+
+[features]
+test = ["flashblocks-payload/test"]
