--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -77,6 +77,8 @@ dashmap.workspace = true
 lazy_static.workspace = true
 thiserror.workspace = true
 
+cfg-if.workspace = true
+
 [dev-dependencies]
 alloy-sol-types.workspace = true
 revm-interpreter.workspace = true
