--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -62,6 +62,7 @@ flashblocks-payload = { workspace = true, features = ["test"] }
 
 reth-db.workspace = true
 reth-e2e-test-utils.workspace = true
+reth-engine-primitives.workspace = true
 reth-node-core.workspace = true
 reth-optimism-consensus.workspace = true
 reth-optimism-node = { workspace = true, features = ["test-utils"] }
