--- a/crates/world/node/Cargo.toml
+++ b/crates/world/node/Cargo.toml
@@ -97,6 +97,11 @@ parking_lot.workspace = true
 serde_json.workspace = true
 rand.workspace = true
 bytes.workspace = true
+alloy-sol-types.workspace = true
+alloy-contract.workspace = true
+alloy-provider.workspace = true
+alloy-rpc-client.workspace = true
+reqwest.workspace = true
 
 [features]
 test = ["flashblocks-payload/test"]
