--- a/crates/flashblocks/cli/Cargo.toml
+++ b/crates/flashblocks/cli/Cargo.toml
@@ -5,6 +5,8 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+flashblocks-builder.workspace = true
+
 ed25519-dalek.workspace = true
 clap.workspace = true
 eyre.workspace = true
