--- a/crates/flashblocks/node/Cargo.toml
+++ b/crates/flashblocks/node/Cargo.toml
@@ -34,6 +34,7 @@ reth-transaction-pool.workspace = true
 reth-rpc-server-types.workspace = true
 reth-rpc-eth-api.workspace = true
 reth-rpc-engine-api.workspace = true
+reth-basic-payload-builder.workspace = true
 
 reth-ethereum.workspace = true
 reth-eth-wire.workspace = true
