chore: update code owners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @0xForerunner @Dzejkop @0xOsiris @karankurbur @murph @kilianglas @alessandromazza98
+* @0xForerunner @Dzejkop @0xOsiris @karankurbur @murph @kilianglas @alessandromazza98 @piohei @cichaczem
