--- a/crates/world/test/Cargo.toml
+++ b/crates/world/test/Cargo.toml
@@ -60,6 +60,7 @@ chrono.workspace = true
 rand.workspace = true
 tokio.workspace = true
 parking_lot.workspace = true
+tracing.workspace = true
 
 [dev-dependencies]
 test-case.workspace = true
