--- a/devnet/network_params.yaml
+++ b/devnet/network_params.yaml
@@ -17,8 +17,7 @@ optimism_package:
         el_builder_image: world-chain:latest
         cl_type: op-node
         cl_image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:v1.13.3
-      - el_type: custom
-        el_image: world-chain:latest
+      - el_type: op-reth
         el_builder_type: custom
         el_builder_image: world-chain:latest
         cl_type: op-node
