--- a/Cargo.toml
+++ b/Cargo.toml
@@ -181,6 +181,7 @@ alloy-signer-local = { version = "1.1.2", default-features = false, features = [
 ] }
 alloy-sol-types = "1.4.1"
 alloy-serde = { version = "1.1.2", default-features = false }
+alloy-trie = { version = "0.9.1", default-features = false, features = ["ethereum"] }
 alloy-hardforks = { version = "0.4.4", default-features = false }
 
 # revm
