--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -67,4 +67,7 @@ op-alloy-network.workspace = true
 alloy-sol-types.workspace = true
 alloy-genesis.workspace = true
 alloy-signer-local.workspace = true
+alloy-trie.workspace = true
 reth-tracing.workspace = true
+proptest = "1.4"
+serde.workspace = true
