--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -60,6 +60,7 @@ dashmap.workspace = true
 thiserror.workspace = true
 either.workspace = true
 serde.workspace = true
+metrics.workspace = true
 
 [dev-dependencies]
 serde.workspace = true
@@ -71,8 +72,9 @@ alloy-genesis.workspace = true
 alloy-signer-local.workspace = true
 alloy-rpc-types-eth.workspace = true
 reth-tracing.workspace = true
-proptest = { version = "*"}
+proptest = { version = "*" }
 alloy-trie.workspace = true
 world-chain-pool.workspace = true
 world-chain-payload.workspace = true
 tracing-subscriber.workspace = true
+
