--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -59,12 +59,20 @@ rayon.workspace = true
 dashmap.workspace = true
 thiserror.workspace = true
 either.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
+serde.workspace = true
 serde_json.workspace = true
 lazy_static.workspace = true
 op-alloy-network.workspace = true
 alloy-sol-types.workspace = true
 alloy-genesis.workspace = true
 alloy-signer-local.workspace = true
+alloy-rpc-types-eth.workspace = true
 reth-tracing.workspace = true
+proptest = { version = "*"}
+alloy-trie.workspace = true
+world-chain-pool.workspace = true
+world-chain-payload.workspace = true
+tracing-subscriber.workspace = true
