--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -60,6 +60,7 @@ dashmap.workspace = true
 thiserror.workspace = true
 either.workspace = true
 metrics.workspace = true
+rand.workspace = true
 
 [dev-dependencies]
 serde.workspace = true
