fix: remove transition caching in validator

--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -61,6 +61,7 @@ thiserror.workspace = true
 either.workspace = true
 metrics.workspace = true
 rand.workspace = true
+serde.workspace = true
 
 [dev-dependencies]
 serde.workspace = true
@@ -77,3 +78,7 @@ alloy-trie.workspace = true
 world-chain-pool.workspace = true
 world-chain-payload.workspace = true
 tracing-subscriber.workspace = true
+
+[[test]]
+name = "proptest"
+path = "tests/it/main.rs"
