use bon for nicer tests

--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -67,3 +67,6 @@ futures.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 eyre.workspace = true
+
+[dev-dependencies]
+bon.workspace = true
