test: fix tests + pr review

--- a/crates/flashblocks/builder/Cargo.toml
+++ b/crates/flashblocks/builder/Cargo.toml
@@ -61,6 +61,7 @@ thiserror.workspace = true
 either.workspace = true
 metrics.workspace = true
 serde.workspace = true
+backon.workspace = true
 
 [dev-dependencies]
 serde.workspace = true
