--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "contracts/lib/forge-std"]
+[submodule "lib/forge-std"]
 	path = contracts/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
 [submodule "contracts/lib/BokkyPooBahsDateTimeLibrary"]
