--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -10,6 +10,7 @@ on:
 env:
     FOUNDRY_PROFILE: ci
     WORLDCHAIN_PROVIDER: "${{ secrets.WORLDCHAIN_PROVIDER }}"
+    ETHEREUM_PROVIDER: "${{ secrets.ETHEREUM_PROVIDER }}"
 
 jobs:
     check:
