--- a/.github/workflows/foundry.yml
+++ b/.github/workflows/foundry.yml
@@ -40,4 +40,4 @@ jobs:
               run: forge build --sizes
 
             - name: Run Forge tests
-              run: forge test -vvv
+              run: forge test --fork-url ${{ env.ETHEREUM_PROVIDER }}
