--- a/crates/toolkit/Cargo.toml
+++ b/crates/toolkit/Cargo.toml
@@ -11,7 +11,10 @@ world-chain-pbh.workspace = true
 alloy-consensus.workspace = true
 alloy-network.workspace = true
 alloy-primitives.workspace = true
+alloy-provider = { workspace = true, features = ["reqwest", "reqwest-default-tls"] }
+alloy-rpc-client.workspace = true
 alloy-rlp.workspace = true
+alloy-sol-types.workspace = true
 
 # 3rd party
 bytes.workspace = true
@@ -25,3 +28,5 @@ tokio.workspace = true
 dotenvy.workspace = true
 chrono.workspace = true
 rand.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
